--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=4242 react-scripts start",
-    "build": "PORT=4242 react-scripts build",
-    "test": "PORT=4242 react-scripts test",
-    "eject": "PORT=4242 react-scripts eject"
+    "start": "cross-env PORT=4242 react-scripts start",
+    "build": "cross-env PORT=4242 react-scripts build",
+    "test": "cross-env PORT=4242 react-scripts test",
+    "eject": "cross-env PORT=4242 react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
